mywork/force-app/main/default/objects/Sprint_Item__c/Sprint_Item__c.object-meta.xml
<CustomObject>
    <label>Sprint Item</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Sprint Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>