mywork/force-app/main/default/objects/Sprint_Item__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog Item</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Sprint Items</relationshipLabel>
    <relationshipName>Sprint_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>